[package]
name = "tune"
version = "0.35.0"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Explore musical tunings and create synthesizer tuning files for microtonal scales."
repository = "https://github.com/Woyten/tune/"
readme = "README.md"
keywords = ["microtonal", "midi", "scales", "synthesizer", "tuning"]
license = "MIT"
edition = "2021"
rust-version = "1.88"

[dependencies]

[dev-dependencies]
assert_approx_eq = "1.1.0"

[workspace]
members = ["fluid-xenth", "magnetron", "microwave", "tune-cli", "tune-web"]

[workspace.dependencies]
pretty_assertions = "1.4"

# Enables optimizations for dependencies during development s.t. the bevy engine remains performant while development feedback cycles are fast
[profile.dev.package."*"]
opt-level = 3
