[package]
name = "fluid-xenth"
version = "0.7.0"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Stop making music with notes. Use pitches."
repository = "https://github.com/Woyten/tune/tree/master/fluid-xenth"
readme = "README.md"
keywords = ["fluid", "microtonal", "soundfont", "synthesizer", "tuning"]
categories = ["multimedia", "multimedia::audio"]
license = "MIT"
edition = "2021"
rust-version = "1.61"

[features]
sf3 = ["oxisynth/sf3"]

[dependencies]
oxisynth = "0.0.3"
tune = { version = "0.33.0", path = ".." }

[dev-dependencies]
hound = "3.4.0"
