[package]
name = "fluid-xenth"
version = "0.9.0"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Stop making music with notes. Use pitches."
repository = "https://github.com/Woyten/tune/tree/main/fluid-xenth"
readme = "README.md"
keywords = ["fluid", "microtonal", "soundfont", "synthesizer", "tuning"]
categories = ["multimedia", "multimedia::audio"]
license = "MIT"
edition = "2021"
rust-version = "1.88"

[features]
sf3 = ["oxisynth/sf3"]

[dependencies]
oxisynth = "0.1"
tune = { version = "0.35.0", path = ".." }

[dev-dependencies]
hound = "3.4.0"
