[package]
name = "magnetron"
version = "0.6.1"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Create your own modular microtonal synthesizer from reusable building blocks."
repository = "https://github.com/Woyten/tune/tree/main/magnetron"
readme = "README.md"
keywords = ["effects", "microtonal", "modular", "sound", "synthesizer"]
categories = ["multimedia", "multimedia::audio"]
license = "MIT"
edition = "2021"
rust-version = "1.88"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
assert_approx_eq = { version = "1.1" }
