[package]
name = "microwave"
version = "0.38.0"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Make xenharmonic music and explore musical tunings."
repository = "https://github.com/Woyten/tune/tree/main/microwave"
readme = "README.md"
keywords = ["microtonal", "midi", "modular", "piano", "synthesizer"]
categories = ["multimedia", "multimedia::audio"]
license = "MIT"
edition = "2021"
rust-version = "1.88"

[features]
# Enable this feature for fast feedback cycles during development
fast-compile = ["bevy/dynamic_linking"]
sf3 = ["fluid-xenth/sf3"]

[dependencies]
async-std = "1.10.0"
bevy = "0.15.0"
chrono = "0.4.20"
clap = { version = "4.0.29", features = ["derive", "env"] }
cpal = { version = "0.16", features = ["wasm-bindgen"] }
flume = "0.11.0"
fluid-xenth = { version = "0.9.0", path = "../fluid-xenth" }
getrandom = { version = "0.3", features = ["wasm_js"] }
hound = "3.4.0"
log = "0.4.17"
magnetron = { version = "0.6.1", path = "../magnetron" }
midir = "0.10.0"
pretty_assertions = { workspace = true }
rand = "0.9"
ringbuf = "0.4.0"
serde = "1.0.117"
serde_yaml = "0.8"
tune = { version = "0.35.0", path = ".." }
tune-cli = { version = "0.28.0", path = "../tune-cli" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = "0.6.0"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.61", features = [
    "File",
    "Location",
    "UrlSearchParams",
] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = { version = "0.9", features = ["thread_rng"] }
