[package]
name = "microwave"
version = "0.38.0"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Make xenharmonic music and explore musical tunings."
repository = "https://github.com/Woyten/tune/tree/main/microwave"
readme = "README.md"
keywords = ["microtonal", "midi", "modular", "piano", "synthesizer"]
categories = ["multimedia", "multimedia::audio"]
license = "MIT"
edition = "2021"
rust-version = "1.88"

[features]
# Enable this feature for fast feedback cycles during development
fast-compile = ["bevy/dynamic_linking"]
sf3 = ["fluid-xenth/sf3"]

[dependencies]
async-std = { version = "1.13" }
bevy = { version = "0.18" }
chrono = { version = "0.4" }
clap = { version = "4.0", features = ["derive", "env"] }
cpal = { version = "0.17", features = ["wasm-bindgen"] }
flume = { version = "0.12" }
fluid-xenth = { version = "0.9", path = "../fluid-xenth" }
getrandom = { version = "0.4", features = ["wasm_js"] }
hound = { version = "3.4" }
log = { version = "0.4" }
magnetron = { version = "0.6.1", path = "../magnetron" }
midir = { version = "0.10" }
pretty_assertions = { workspace = true }
rand = { version = "0.10" }
ringbuf = { version = "0.4.0" }
serde = { version = "1.0" }
serde_yaml = { version = "0.8" }                           # Keep older version due to serialization issues
tune = { version = "0.35.0", path = ".." }
tune-cli = { version = "0.28.0", path = "../tune-cli" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.11" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = { version = "0.6" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "=0.3.83", features = [
    "File",
    "Location",
    "UrlSearchParams",
] } # Keep old version because of midir not compiling using WASM

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = { version = "0.10", features = ["thread_rng"] }
