[package]
name = "tune-cli"
version = "0.28.0"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Explore musical tunings and create synthesizer tuning files for microtonal scales."
repository = "https://github.com/Woyten/tune/tree/main/tune-cli"
readme = "README.md"
keywords = ["microtonal", "midi", "scales", "synthesizer", "tuning"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[dependencies]
async-std = "1.12.0"
clap = { version = "4.0.29", features = ["derive"] }
flume = "0.11.0"
futures = "0.3.0"
midir = "0.10.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_yml = "0.0.12"
tune = { version = "0.35.0", path = ".." }
