[package]
name = "tune-cli"
version = "0.29.0"
authors = ["Woyten <woyten.tielesch@online.de>"]
description = "Explore musical tunings and create synthesizer tuning files for microtonal scales."
repository = "https://github.com/Woyten/tune/tree/main/tune-cli"
readme = "README.md"
keywords = ["microtonal", "midi", "scales", "synthesizer", "tuning"]
license = "MIT"
edition = "2024"
rust-version = "1.88"

[dependencies]
serde_yaml = { version = "0.8" }
async-std = { version = "1.12" }
clap = { version = "4.0", features = ["derive"] }
flume = { version = "0.12" }
futures = { version = "0.3" }
midir = { version = "0.11" }
serde = { version = "1.0.106", features = ["derive"] }
tune = { version = "0.36.0", path = ".." }
